k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: black-sea-server
  labels:
    app: black-sea-server
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: black-sea-server
  template:
    metadata:
      labels:
        app: black-sea-server
    spec:
      imagePullSecrets:
        - name: github-image-pull
      containers:
        - name: black-sea-server
          image: ghcr.io/dtennander/black-sea
          ports:
            - containerPort: 7456
              name: websocket
            - containerPort: 9090
              name: metrics
          volumeMounts:
            - name: osm-cache
              mountPath: /data/osm-cache
      volumes:
        - name: osm-cache
          persistentVolumeClaim:
            claimName: osm-cache-pvc
