k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: black-sea-service
  labels:
    app: black-sea-server
spec:
  type: ClusterIP
  selector:
    app: black-sea-server
  ports:
    - port: 80
      targetPort: 7456
      protocol: TCP
      name: websocket
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: metrics
