k8s/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: black-sea-admin-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/auth-url: |
      "http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: |
      "https://auth.cluster.tennander.se/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: |
      "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - black-sea.tennander.se
      secretName: black-sea-tls-2
  rules:
    - host: black-sea.tennander.se
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: black-sea-service
                port:
                  number: 8080
