k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: black-sea-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - world.black-sea.tennander.se
      secretName: black-sea-tls
  rules:
    - host: world.black-sea.tennander.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: black-sea-service
                port:
                  number: 80
